Fixed if the height is too tall
Adding scroll property to allow user to scroll to the bottom

--- a/src/app/components/tableview/dialogview/dialogview.component.css
+++ b/src/app/components/tableview/dialogview/dialogview.component.css
@@ -17,3 +17,8 @@
       margin-bottom: .5rem;
       margin-right: -1.5rem;
   }
+
+  .scrollable{
+    height:600px;
+    overflow-y: scroll;
+  }
